# wilton_core

./: .cirrus.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml
.circleci/: config.yml
include/wilton/: wilton.h  wilton_c.h  wiltoncall.h
include/wilton/support/: alloc.hpp  alloc_copy.hpp  buffer.hpp  exception.hpp  handle_registry.hpp  logging.hpp  misc.hpp  payload_handle_registry.hpp  registrar.hpp  script_engine.hpp  script_engine_map.hpp  shared_handle_registry.hpp  span_operations.hpp  tl_registry.hpp  unique_handle_registry.hpp  wilton_support_exception.hpp
resources/: vg_jni.supp  wilton.rc  wilton_core.def  wilton_core.rc  winservice.rc
src/: DocumentRoot.hpp  FileHandler.hpp  Header.hpp  Logger.hpp  MustacheProcessor.hpp  Request.hpp  RequestMetadata.hpp  ResponseMetadata.hpp  ResponseStreamSender.hpp  Server.hpp  ServerConfig.hpp  StringPayloadHandler.hpp  WiltonInternalException.hpp  WiltonLogger.hpp  ZipHandler.hpp  utils.hpp  wilton.cpp  wilton_c.cpp
src/call/: WiltoncallRegistry.hpp  wiltoncall.cpp  wiltoncall_internal.hpp  wiltoncall_registry.hpp
src/client/: ClientRequestConfig.hpp  ClientResponse.hpp  ClientResponseMetadata.hpp  ClientSessionConfig.hpp  client_request_config.hpp  client_response.hpp  client_session_config.hpp  wilton_client.cpp  wiltoncall_client.cpp
src/common/: WiltonInternalException.hpp  utils.cpp  utils.hpp  wilton_common.cpp  wilton_internal_exception.hpp
src/cron/: CronTask.cpp  CronTask.hpp  cron_task.cpp  cron_task.hpp  wilton_cron.cpp  wiltoncall_cron.cpp
src/db/: wilton_db.cpp  wiltoncall_db.cpp
src/duktape/: duktape_engine.cpp  duktape_engine.hpp  wiltoncall_duktape.cpp
src/dyload/: dyload_posix.hpp  dyload_windows.hpp  wilton_dyload.cpp  wiltoncall_dyload.cpp
src/fs/: wiltoncall_fs.cpp
src/jni/: jni_config.hpp  jni_utils.cpp  jni_utils.hpp  wilton_jni.cpp  wilton_jni_config.hpp  wiltoncall_jni.cpp
src/json/: Appender.hpp  DocumentRoot.hpp  Header.hpp  Logger.hpp  Logging.hpp  MimeType.hpp  RequestMetadata.hpp  ResponseMetadata.hpp  ServerConfig.hpp  SslConfig.hpp
src/launcher/: cli.cpp  cli_options.hpp  winservice.cpp  winservice_config.hpp  winservice_exception.hpp  winservice_options.hpp
src/load/: wilton_load.cpp  wiltoncall_load.cpp
src/logging/: AppenderConfig.hpp  LoggerConfig.hpp  LoggingConfig.hpp  WiltonLogger.cpp  WiltonLogger.hpp  appender_config.hpp  logger_config.hpp  logging_config.hpp  logging_internal.hpp  wilton_logger.cpp  wilton_logger.hpp  wilton_logging.cpp  wiltoncall_logging.cpp
src/misc/: TCPConnectChecker.cpp  TCPConnectChecker.hpp  tcp_connect_checker.cpp  tcp_connect_checker.hpp  wilton_misc.cpp  wiltoncall_misc.cpp
src/mustache/: MustacheProcessor.cpp  MustacheProcessor.hpp  wilton_mustache.cpp  wiltoncall_mustache.cpp
src/mutex/: Mutex.cpp  Mutex.hpp  waitable_mutex.cpp  waitable_mutex.hpp  wilton_mutex.cpp  wiltoncall_mutex.cpp
src/server/: FileHandler.hpp  HttpPath.hpp  Request.cpp  Request.hpp  RequestPayloadHandler.hpp  ResponseStreamSender.hpp  ResponseWriter.cpp  ResponseWriter.hpp  Server.cpp  Server.hpp  StringPayloadHandler.hpp  ZipHandler.hpp  file_handler.hpp  http_path.hpp  request.cpp  request.hpp  request_payload_handler.hpp  response_stream_sender.hpp  response_writer.cpp  response_writer.hpp  server.cpp  server.hpp  wilton_server.cpp  wiltoncall_server.cpp  zip_handler.hpp
src/serverconf/: Appender.hpp  DocumentRoot.hpp  Header.hpp  Logger.hpp  Logging.hpp  MimeType.hpp  MustacheConfig.hpp  RequestMetadata.hpp  RequestPayloadConfig.hpp  ResponseMetadata.hpp  ServerConfig.hpp  SslConfig.hpp  document_root.hpp  header.hpp  mime_type.hpp  mustache_config.hpp  request_metadata.hpp  request_payload_config.hpp  response_metadata.hpp  server_config.hpp  ssl_config.hpp
src/shared/: wilton_shared.cpp  wiltoncall_shared.cpp
src/signal/: wilton_signal.cpp  wiltoncall_signal.cpp
src/thread/: wilton_thread.cpp  wiltoncall_thread.cpp
test/: CMakeLists.txt  test.js  wait_signal.js  wilton_c_test.c  wilton_c_test.cpp  wilton_test.c  wilton_test_module.c
test/scripts/: runMathJsTests.js  runNodeTests.js  runSanityTests.js  runWiltonTests.js  runZipLoadTests.js  threadMemTest.js  wait_signal.js
test/winservice/: config.json  index.js
test/winservice/conf/: config.json
test/winservice/testmod/: index.js
